--- a/HelloUCD/Base.lproj/Main.storyboard
+++ b/HelloUCD/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,11 +19,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello UCD!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="3f6-hg-zEm">
-                                <rect key="frame" x="97" y="86" width="206" height="48"/>
+                                <rect key="frame" x="243" y="86" width="206" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="CeI-1X-far"/>
                                     <constraint firstAttribute="width" constant="206" id="gYV-Or-Btk"/>
@@ -33,7 +33,7 @@
                                 <color key="highlightedColor" red="0.14835561858792959" green="0.035503537668928831" blue="0.3842005076142132" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ucdlogo" translatesAutoresizingMaskIntoConstraints="NO" id="Ozy-Sc-4f2">
-                                <rect key="frame" x="97" y="133" width="196" height="447"/>
+                                <rect key="frame" x="101" y="133" width="480" height="155"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.066666666666666666" green="0.42745098039215684" blue="0.65098039215686276" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
